--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     <title>Lesson 6</title>
   </head>
   <body>
-    <header class="header container1">
+    <header class="header">
       <div class="header__left">
         <a href="#"><img src="./img/icons/Логотип розовый.png" alt="Logo.png" /></a>
-        <a href="#"><img src="./img/icons/Поиск.png" alt="" /></a>
+        <button class="button_Top"><img src="./img/icons/Поиск.png" alt="" /></button>
       </div>
       <div class="header__right">
-        <a href="#"><img src="./img/icons/Три полосы.png" alt="Три полосы" /></a>
-        <a href="#"><img src="./img/icons/Человечек.png" alt="Человечек" /></a>
-        <a href="#"><img src="./img/icons/Корзина.png" alt="Корзина" /></a>
+        <button class="button_Top"><img src="./img/icons/Три полосы.png" alt="Три полосы" /></button>
+        <button class="button_Top"><img src="./img/icons/Человечек.png" alt="Человечек" /></button>
+        <button class="button_Top"><img src="./img/icons/Корзина.png" alt="Корзина" /></button>
       </div>
     </header>
-    <main class="section1 container1">
+    <main class="section1">
       <img src="./img/Main_left.png" alt="Main_left" />
-      <div class="mainCardRight"><img src="./img/Main_right.png" alt="" /></div>
+      <div class="section1_Right">
+        <h1>THE BRAND</h1>
+        <h2>OF LUXERIOUS <span class="colorText">FASHION</span></h2>
+      </div>
     </main>
-    <div class="section2 container1">
-      <section class="cardList1 container2">
-        <a href="#"><img src="./img/секция1/1-for women.png" alt="1-for women.png" /></a>
-        <a href="#"><img src="./img/секция1/2-for men.jpg" alt="2-for men.jpg" /></a>
-        <a href="#"><img src="./img/секция1/3-for kids.png" alt="3-for kids.png" /></a>
-        <a href=""><img src="./img/секция1/4-ACCESORIES.png" alt="4-ACCESORIES.png" /></a>
+    <div class="section2">
+      <section class="cardList1 container">
+        <a href="#"><img class="card1" src="./img/секция1/1-for women.png" alt="1-for women.png" /></a>
+        <a href="#"><img class="card1" src="./img/секция1/2-for men.jpg" alt="2-for men.jpg" /></a>
+        <a href="#"><img class="card1" src="./img/секция1/3-for kids.png" alt="3-for kids.png" /></a>
+        <a href=""><img class="card_Bottom" src="./img/секция1/4-ACCESORIES.png" alt="4-ACCESORIES.png" /></a>
       </section>
-      <div class="span1 container2"><span>Fetured Items</span></div>
-      <div class="span2 container2"><span>Shop for items based on what we featured in this week</span></div>
-      <section class="cardList2 container2">
+      <div class="span1 container"><span>Fetured Items</span></div>
+      <div class="span2 container"><span>Shop for items based on what we featured in this week</span></div>
+      <section class="cardList2 container">
         <div class="card2">
           <a href="#"
             ><img src="./img/card2/Foto1.jpg" alt="Foto1" />
@@ -99,9 +102,7 @@
           </a>
         </div>
       </section>
-      <div class="button">
-        <button class="button_B_A_P container2">Browse All Product</button>
-      </div>
+      <div class="button container"><button class="button_B_A_P">Browse All Product</button></div>
     </div>
   </body>
 </html>
