--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Lesson 6</title>
+    <title>Lesson 8</title>
   </head>
   <body>
     <header class="header">
@@ -14,8 +14,8 @@
       </div>
       <div class="header__right">
         <button class="button_Top"><img src="./img/icons/Три полосы.png" alt="Три полосы" /></button>
-        <button class="button_Top"><img src="./img/icons/Человечек.png" alt="Человечек" /></button>
-        <button class="button_Top"><img src="./img/icons/Корзина.png" alt="Корзина" /></button>
+        <button class="button_Top button_Top_Hidden"><img src="./img/icons/Человечек.png" alt="Человечек" /></button>
+        <button class="button_Top button_Top_Hidden"><img src="./img/icons/Корзина.png" alt="Корзина" /></button>
       </div>
     </header>
     <main class="section1">
@@ -27,10 +27,42 @@
     </main>
     <div class="section2">
       <section class="cardList1 container">
-        <a href="#"><img class="card1" src="./img/секция1/1-for women.png" alt="1-for women.png" /></a>
-        <a href="#"><img class="card1" src="./img/секция1/2-for men.jpg" alt="2-for men.jpg" /></a>
-        <a href="#"><img class="card1" src="./img/секция1/3-for kids.png" alt="3-for kids.png" /></a>
-        <a href=""><img class="card_Bottom" src="./img/секция1/4-ACCESORIES.png" alt="4-ACCESORIES.png" /></a>
+        <a href="#">
+          <div class="card1">
+            <img src="./img/секция1/Foto1-1.png" alt="Foto1.png" />
+            <div class="card1_text_center">
+              <h1>30% OFF</h1>
+              <h2>FOR WOMEN</h2>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card1">
+            <img src="./img/секция1/Foto2.jpg" alt="Foto2.png" />
+            <div class="card1_text_center">
+              <h1>HOT DEAL</h1>
+              <h2>FOR MEN</h2>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card1">
+            <img src="./img/секция1/Foto3.jpg" alt="Foto3.png" />
+            <div class="card1_text_center">
+              <h1>NEW ARRIVALS</h1>
+              <h2>FOR KIDS</h2>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card1_Bottom">
+            <img src="./img/секция1/Foto4.jpg" alt="Foto4.png" />
+            <div class="card1_Bottom_text_center">
+              <h1>LUXIROUS & TRENDY</h1>
+              <h2>ACCESORIES</h2>
+            </div>
+          </div>
+        </a>
       </section>
       <div class="span1 container"><span>Fetured Items</span></div>
       <div class="span2 container"><span>Shop for items based on what we featured in this week</span></div>
