--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lesson11</title>
   </head>
   <body>
-    <div class="span2 container"><span>Shop for items based on what we featured in this week</span>
+    <!-- <div class="span2 container"><span>Shop for items based on what we featured in this week</span> -->
 
     <div class="feturedItems"></div>
     <script src="./data.js"></script>
